[gd_scene load_steps=7 format=2]

[ext_resource path="res://DoHoa/MotSoThuKhac/SamSet/1.png" type="Texture" id=1]
[ext_resource path="res://SamSet.gd" type="Script" id=2]
[ext_resource path="res://DoHoa/Music/Rain.ogg" type="AudioStream" id=3]
[ext_resource path="res://DoHoa/Music/SamSet.ogg" type="AudioStream" id=4]

[sub_resource type="Environment" id=1]
background_mode = 2
glow_enabled = true
glow_levels/2 = true
glow_levels/3 = false
glow_levels/6 = true
glow_levels/7 = true
glow_intensity = 1.8
glow_strength = 1.5
glow_blend_mode = 0

[sub_resource type="Animation" id=2]
resource_name = "SamSet"
length = 0.6
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/WorldEnvironment:environment:glow_bloom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.25, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/WorldEnvironment:environment:glow_enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="SamSet" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -4.02679, 144.947 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="Sprite"]
environment = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SamSet = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Mua" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0
max_distance = 11500.0

[node name="Set" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0
max_distance = 11500.0

[node name="DungSamSet" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DungSamSet" to="." method="_on_DungSamSet_timeout"]
